--- a/src/pages/text/textShow.module.less
+++ b/src/pages/text/textShow.module.less
@@ -20,3 +20,9 @@
     word-break: break-all;
     margin-left: 3%;
 }
+
+.sumWrapper {
+    width: 100%;
+    display: flex;
+    align-items: end;
+}
