--- a/src/pages/upload/upload.module.less
+++ b/src/pages/upload/upload.module.less
@@ -2,13 +2,12 @@
 
 .wrapper {
     width: 60%;
-    max-height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
     // margin-bottom: 10%;
     padding: 4% 1%;
-    padding-bottom: 10%;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     justify-content: flex-start;
