--- a/src/pages/login/login.module.less
+++ b/src/pages/login/login.module.less
@@ -2,5 +2,22 @@
 
 .title {
     .titleFont();
+}
 
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(10px);
+        /* 可选：稍微向下位移一点再浮上来 */
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.fadeContent {
+    /* 应用动画，持续 0.5秒 */
+    animation: fadeIn 0.5s ease-in-out;
 }
