--- a/src/components/textCard/textCard.module.less
+++ b/src/components/textCard/textCard.module.less
@@ -4,7 +4,6 @@
     --fontColorInverse: white;
     --allBackground: #EEEDEE;
     --overLay: #F5F7FA;
-
 }
 
 
@@ -71,7 +70,7 @@
 
 .mainContentOpen {
     font-size: 1.5rem;
-    height: 3rem;
+    height: auto;
     line-height: 3rem;
     background-color: var(--darkColor);
     display: block;
