--- a/src/pages/text/textShow.module.less
+++ b/src/pages/text/textShow.module.less
@@ -14,11 +14,11 @@
 }
 
 .title {
-    font-size: 1.5rem;
+    font-size: 120%;
     font-weight: 600;
     line-height: 1.5rem;
     word-break: break-all;
-    margin-left: 3%;
+    margin: 0 3%;
 }
 
 .sumWrapper {
