refactor:修改css变量来源自antdesgin的token

--- a/src/pages/upload/upload.module.less
+++ b/src/pages/upload/upload.module.less
@@ -8,11 +8,9 @@
     margin: 0 auto;
     // margin-bottom: 10%;
     padding: 4% 1%;
-    border-radius: 8px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     justify-content: flex-start;
     align-items: center;
-    .darkMode
+    .containerBgColor
 }
 
 .inputWrapper {
