--- a/src/App.less
+++ b/src/App.less
@@ -9,11 +9,8 @@ body {
   margin: 0px;
 }
 
-#root {
-  .darkModeTransition;
-  background-color: var(--allBackground);
-}
 
 html {
   overflow-y: scroll;
+  height: 100%;
 }
