--- a/src/components/basement/basement.module.less
+++ b/src/components/basement/basement.module.less
@@ -6,6 +6,5 @@
     flex: 20;
     //background-color: white;
     padding: 1% 3%;
-    background-color: var(--darkColor);
-    .darkMode
+    background-color: var(--color-bg-base);
 }
