--- a/src/components/layout/left/left.module.less
+++ b/src/components/layout/left/left.module.less
@@ -5,15 +5,12 @@
     flex: 5;
     display: flex;
     flex-direction: column;
-
-    // position: sticky;
-    // top: @homeTopPadding;
 }
 
 
 
 .upWrapper {
-    .darkMode;
+    .containerBgColor;
     height: auto;
     margin-bottom: 10px;
     padding: 10% 10%;
@@ -22,8 +19,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: baseline;
-    border: 1.3px solid var(---fontColorInverse);
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+    // border: 1.3px solid var(---fontColorInverse);
+    // box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
     font-size: 1.2rem;
     line-height: 1.2rem;
 
@@ -44,12 +41,11 @@
 }
 
 .upWrapper:hover {
-    border-color: var(---fontColorInverse);
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+    .containerShadow;
 }
 
 .downWrapper {
-    .darkMode;
+    .containerBgColor;
     position: sticky;
     top: @homeTopPadding;
     width: 100%;
@@ -61,14 +57,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: baseline;
-
-    // border: 1.3px solid var(--fontColorInverse);
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
 .downWrapper:hover {
-    border-color: var(---fontColorInverse);
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+    .containerShadow;
 }
 
 .btn {
@@ -78,7 +70,7 @@
     align-items: center;
 }
 
-.sup {
+.support {
     width: 100%;
     display: flex;
     justify-content: space-around;
