--- a/src/components/layout/right/right.module.less
+++ b/src/components/layout/right/right.module.less
@@ -2,7 +2,6 @@
 
 .wrapper {
     align-self: flex-start;
-    background-color: green;
     flex: 5;
     position: sticky;
     top: 1%;
@@ -12,13 +11,9 @@
     row-gap: 10px;
     display: flex;
     flex-direction: column;
-    border: 1.3px solid var(---fontColorInverse);
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-    .darkMode;
+    .containerBgColor
 }
 
-
-.pos {
-    position: absolute;
-    top: 2px;
+.wrapper:hover {
+    .containerShadow
 }
