--- a/src/components/textCard/textCard.module.less
+++ b/src/components/textCard/textCard.module.less
@@ -1,31 +1,9 @@
-.chapter {
-    --darkColor: white;
-    --fontColor: #191919;
-    --fontColorInverse: white;
-    --allBackground: #EEEDEE;
-    --overLay: #F5F7FA;
-}
-
-
-
-[data-theme='dark'] {
-    --darkColor: #1E1E1E;
-    --fontColor: #E0E0D4;
-    ---fontColorInverse: #191919;
-    --allBackground: #121212; //背景黑色
-    --overLay: #525252;
-}
-
-.fontColor {
-    color: var(--fontColor);
-    user-select: none;
-}
-
+@import '@/css/commonStyles/commonStyles.module.less';
 
 .chapterTitle {
     width: 100%;
     cursor: pointer;
-    color: var(--fontColor);
+    color: var(--color-text);
     user-select: none;
     font-size: 2rem;
     font-weight: 500;
@@ -40,7 +18,6 @@
     height: 0rem;
     font-size: 0px;
     width: 100%;
-    background-color: var(--darkColor);
     cursor: pointer;
     .fontColor;
 
@@ -48,10 +25,13 @@
         display: none;
     }
 
+    .setCancelPin {
+        display: inline-block;
+    }
+
 }
 
 .textTitle:hover {
-    background-color: var(--overLay);
     color: #409EFF;
 
     .setPin {
@@ -72,12 +52,11 @@
     font-size: 1.5rem;
     height: auto;
     line-height: 3rem;
-    background-color: var(--darkColor);
     display: block;
     transition: height 0.2s linear;
     transition: font-size 0.1s cubic-bezier(.29, .08, 0, .98);
     padding: 0 20px;
-    .fontColor;
+    .containerBgColor;
 }
 
 .mainTitle {
