--- a/src/css/commonStyles/commonStyles.module.less
+++ b/src/css/commonStyles/commonStyles.module.less
@@ -1,42 +1,16 @@
 @homeTopPadding: 1%;
 
-:root {
-    --darkColor: var(--color-bg-base);
-    --fontColor: var(--color-text);
-    --fontColorInverse: white;
-    --allBackground: var(--color-bg-layout);
+
+.fontColor {
+    color: var(--color-text);
 }
 
-[data-theme='dark'] {
-    --darkColor: var(--color-bg-base);
-    --fontColor: var(--color-text);
-    ---fontColorInverse: #191919;
-    --allBackground: var(--color-bg-layout);
+.containerBgColor {
+    background-color: var(--color-bg-base);
+    color: var(--color-text);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
-.center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.darkModeTransition {
-    transition: background-color 0.2s linear;
-    transition: color 0.3s linear;
-}
-
-.darkMode {
-    .darkModeTransition;
-    background-color: var(--darkColor);
-    color: var(--fontColor);
-}
-
-.darkFont {
-    color: var(--fontColor);
-}
-
-.darkModeInverse {
-    .darkModeTransition;
-    background-color: var(--darkColor);
-    color: var(--fontColor);
+.containerShadow {
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
 }
