feat:刷新后的校验登录

--- a/src/pages/text/textShow.module.less
+++ b/src/pages/text/textShow.module.less
@@ -1,3 +1,5 @@
+@import '@/css/commonStyles/commonStyles.module.less';
+
 .titleWrapper {
     width: 100%;
     display: flex;
@@ -25,4 +27,9 @@
     width: 100%;
     display: flex;
     align-items: end;
+    .containerBgColor;
+}
+
+.text {
+    color: var(--color-text);
 }
