feat:去掉了滚动条防止图片抖动

--- a/src/App.less
+++ b/src/App.less
@@ -11,6 +11,11 @@ body {
 
 
 html {
-  overflow-y: scroll;
+  scrollbar-gutter: stable;
   height: 100%;
+}
+
+html::-webkit-scrollbar {
+  width: 0px;
+  height: 0;
 }
