--- a/src/components/buttonList/buttonList.module.less
+++ b/src/components/buttonList/buttonList.module.less
@@ -5,6 +5,9 @@
     padding: 5% 5%;
     color: var(--color-text);
 
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     cursor: pointer;
 }
 
