--- a/src/components/layout/right/right.module.less
+++ b/src/components/layout/right/right.module.less
@@ -1,6 +1,7 @@
 @import '@/css/commonStyles/commonStyles.module.less';
 
 .wrapper {
+    min-width: 0;
     align-self: flex-start;
     flex: 5;
     position: sticky;
