feat:调整至link组件

--- a/src/components/buttonList/buttonList.module.less
+++ b/src/components/buttonList/buttonList.module.less
@@ -1,17 +1,22 @@
 .innerWrapper {
+    display: inline-block;
     width: 100%;
     line-height: 1.2rem;
     font-size: 1.2rem;
     padding: 5% 5%;
     color: var(--color-text);
 
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
     cursor: pointer;
 }
 
 .innerWrapper:hover {
     color: whitesmoke;
     background-color: var(--color-overlay-color);
+}
+
+.content {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
 }
