--- a/src/App.less
+++ b/src/App.less
@@ -2,7 +2,7 @@
 
 * {
   box-sizing: border-box;
-  font-family: Microsoft YaHei Light
+  font-family: Microsoft YaHei
 }
 
 body {
@@ -19,3 +19,20 @@ html::-webkit-scrollbar {
   width: 0px;
   height: 0;
 }
+
+/* 强制覆盖 nprogress 样式 */
+// #nprogress .bar {
+//   background: #29d !important;
+//   /* 确保颜色明显 */
+//   height: 3px !important;
+//   /* 稍微加粗一点以便观察 */
+//   z-index: 99999 !important;
+//   /* 确保在所有层级之上 */
+//   position: fixed !important;
+//   top: 0 !important;
+//   left: 0 !important;
+// }
+
+// #nprogress .spinner {
+//   z-index: 99999 !important;
+// }
