--- a/src/components/AIChat/layout/AIContentLayout.module.less
+++ b/src/components/AIChat/layout/AIContentLayout.module.less
@@ -25,6 +25,7 @@
     background-color: green;
     border-radius: 50px;
     padding: 1% 5%;
+    column-gap: 10px;
 }
 
 .btnWrapper {
@@ -32,53 +33,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.hiddenDiv {
-    background-color: yellow;
-    visibility: hidden;
-    max-height: 200px;
-    width: 100%;
-    height: 100%;
-    white-space: pre-wrap;
-    word-break: break-all;
-    grid-area: 1 / 1 / 2 / 2;
-    padding: 3px 11px;
-}
-
-.innerInputWrapper {
-    flex: 5;
-    display: grid;
+    column-gap: 10px;
 }
 
 .customTextarea {
     height: 100%;
     resize: none;
     grid-area: 1 / 1 / 2 / 2;
-}
-
-.customTextarea::-webkit-scrollbar {
-    width: 8px;
-    /* 纵向滚动条的宽度 */
-    height: 16px;
-    /* 横向滚动条的高度 */
-}
-
-/* 2. 滚动条轨道 (背景) */
-.customTextarea::-webkit-scrollbar-track {
-    background: #f1f1f1;
-    border-radius: 4px;
-    /* 轨道的圆角 */
-}
-
-/* 3. 滚动条滑块 (移动部分) */
-.customTextarea::-webkit-scrollbar-thumb {
-    background: var(--color-bg-layout);
-    border-radius: 4px;
-    /* 滑块的圆角 */
-}
-
-/* 4. 鼠标悬停在滑块上时的样式 */
-.customTextarea::-webkit-scrollbar-thumb:hover {
-    background: #555;
 }
