--- a/src/components/AIChat/layout/AIContentLayout.module.less
+++ b/src/components/AIChat/layout/AIContentLayout.module.less
@@ -2,30 +2,60 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    overflow: auto;
+    overflow-y: scroll;
+    padding-top: 2%;
 }
 
-.chat {
-    background-color: red;
-    flex: 20;
-    height: 1000px;
-}
+
 
 .input {
     width: 100%;
     flex: 1;
     display: flex;
     justify-content: center;
+    margin-bottom: 3%;
 }
 
 .inputWrapper {
     width: 80%;
     display: flex;
     flex-direction: row;
-    background-color: green;
-    border-radius: 50px;
+    border-radius: 10px;
     padding: 1% 5%;
     column-gap: 10px;
+    background-color: var(--color-bg-layout);
+
+    /* 针对 Webkit 内核 (Chrome, Safari, Edge) */
+    textarea::-webkit-scrollbar {
+        width: 8px;
+        /* 纵向滚动条宽度 */
+        height: 8px;
+        /* 横向滚动条高度 */
+    }
+
+    /* 滚动条滑块 (The thumb) */
+    textarea::-webkit-scrollbar-thumb {
+        background-color: var(--color-bg-elevated);
+        /* 滑块颜色 */
+        border-radius: 4px;
+        /* 滑块圆角 */
+    }
+
+    /* 滚动条滑块悬停效果 */
+    textarea::-webkit-scrollbar-thumb:hover {
+        background-color: #a8a8a8;
+    }
+
+    /* 滚动条轨道 (The track) */
+    textarea::-webkit-scrollbar-track {
+        background-color: var(--color-text);
+        /* 轨道背景色 */
+        border-radius: 4px;
+    }
+
+    textarea::-webkit-scrollbar-button {
+        display: none;
+    }
 }
 
 .btnWrapper {
@@ -36,8 +66,48 @@
     column-gap: 10px;
 }
 
+
+/* ---------------------------------- */
+
+/* 针对 Firefox (使用标准属性) */
 .customTextarea {
-    height: 100%;
-    resize: none;
-    grid-area: 1 / 1 / 2 / 2;
+    /* 关键字: auto, thin, none */
+    scrollbar-width: thin;
+
+    /* 两个颜色值: <滑块颜色> <轨道颜色> */
+    scrollbar-color: #c1c1c1 #f1f1f1;
+}
+
+
+.chat {
+    background-color: var(--color-bg-base);
+    display: flex;
+    flex: 20;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    gap: 20px;
+}
+
+.prompt {
+    width: 50%;
+    align-self: flex-end;
+    padding: 10px 20px;
+    border-radius: 24px 4px 24px 24px;
+    background-color: red;
+}
+
+
+.thinking {
+    color: gray;
+    font-style: italic;
+    margin-bottom: 10px;
+}
+
+.content {}
+
+.center {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
 }
