feat:提交聊天信息到后端

--- a/src/components/AIChat/layout/SingleChat.module.less
+++ b/src/components/AIChat/layout/SingleChat.module.less
@@ -243,6 +243,13 @@
     gap: 10px;
 }
 
+.promptBtn {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+}
+
 .collapseCustom :global(.ant-collapse-header) {
     user-select: none;
     /* 标准写法 */
