--- a/src/components/AIChat/layout/AIChatMain/ChatLayout.module.less
+++ b/src/components/AIChat/layout/AIChatMain/ChatLayout.module.less
@@ -89,6 +89,11 @@
     width: 100%;
     overflow: auto;
     scrollbar-gutter: stable;
+
+}
+
+.chat::-webkit-scrollbar {
+    display: none;
 }
 
 .prompt {
